--- a/index.html
+++ b/index.html
@@ -150,10 +150,14 @@
 
                 <!-- Hero Image -->
                 <div class="lg:col-span-6 mt-16 lg:mt-0 relative fade-in-up delay-200">
-                    <div class="relative rounded-2xl overflow-hidden shadow-2xl aspect-[4/5] sm:aspect-[4/3] lg:aspect-[4/5] max-w-md mx-auto lg:max-w-full group">
+                    <div class="relative rounded-2xl overflow-hidden shadow-2xl aspect-[4/5] sm:aspect-[4/3] lg:aspect-[4/5] max-w-md mx-auto lg:max-w-full group bg-sage-100 border-2 border-dashed border-sage-300">
                         <!-- Placeholder for Nutritionist Image -->
-                        <div class="absolute inset-0 bg-gray-200">
-                           <img src="https://images.unsplash.com/photo-1594824476960-e78591a68bdc?q=80&w=2070&auto=format&fit=crop" alt="Clinical Nutritionist with fresh food" class="w-full h-full object-cover transition-transform duration-700 group-hover:scale-105">
+                        <div class="absolute inset-0 flex items-center justify-center">
+                           <div class="text-center p-6">
+                               <i data-lucide="image" class="w-16 h-16 text-sage-400 mx-auto mb-3"></i>
+                               <p class="text-sage-600 font-semibold">Place Your Photo Here</p>
+                               <p class="text-sage-500 text-sm mt-1">Recommended size: 600x800px</p>
+                           </div>
                         </div>
                         <!-- Floating Card -->
                         <div class="absolute bottom-6 left-6 right-6 bg-white/95 backdrop-blur-sm p-6 rounded-xl shadow-lg border border-sage-100">
