--- a/index.html
+++ b/index.html
@@ -231,8 +231,12 @@
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
             <div class="lg:grid lg:grid-cols-2 gap-16 items-center">
                 <div class="relative order-2 lg:order-1">
-                    <div class="relative rounded-2xl overflow-hidden shadow-xl">
-                         <img src="https://images.unsplash.com/photo-1559839734-2b71ea197ec2?q=80&w=2070&auto=format&fit=crop" alt="Doctor Consultation" class="w-full object-cover">
+                    <div class="relative rounded-2xl overflow-hidden shadow-xl bg-sage-100 border-2 border-dashed border-sage-300 aspect-[4/3] flex items-center justify-center">
+                        <div class="text-center p-6">
+                            <i data-lucide="image" class="w-12 h-12 text-sage-400 mx-auto mb-3"></i>
+                            <p class="text-sage-600 font-semibold">Place Your Photo Here</p>
+                            <p class="text-sage-500 text-sm mt-1">Recommended size: 800x600px</p>
+                        </div>
                     </div>
                     <!-- Experience Badge -->
                     <div class="absolute -bottom-6 -right-6 bg-sage-600 text-white p-8 rounded-2xl shadow-xl hidden md:block">
