Updated linkedin link and email id

--- a/index.html
+++ b/index.html
@@ -411,7 +411,7 @@
                                 </div>
                                 <div>
                                     <p class="text-xs text-sage-300 uppercase">Call/DM</p>
-                                    <p class="font-medium">7986612485</p>
+                                    <p class="font-medium">+917986612485</p>
                                 </div>
                             </div>
                             <div class="flex items-center gap-4">
@@ -420,7 +420,7 @@
                                 </div>
                                 <div>
                                     <p class="text-xs text-sage-300 uppercase">Email</p>
-                                    <p class="font-medium">hello.eatkind@gmail.com</p>
+                                    <p class="font-medium">hello@eatkind.in</p>
                                 </div>
                             </div>
                             <div class="flex items-center gap-4">
@@ -438,7 +438,7 @@
                     <div class="mt-12 flex gap-4">
                         <a href="#" class="w-10 h-10 rounded-full border border-sage-600 flex items-center justify-center hover:bg-sage-700 transition"><i data-lucide="instagram" class="w-5 h-5"></i></a>
                         <a href="#" class="w-10 h-10 rounded-full border border-sage-600 flex items-center justify-center hover:bg-sage-700 transition"><i data-lucide="facebook" class="w-5 h-5"></i></a>
-                        <a href="#" class="w-10 h-10 rounded-full border border-sage-600 flex items-center justify-center hover:bg-sage-700 transition"><i data-lucide="linkedin" class="w-5 h-5"></i></a>
+                        <a href="https://www.linkedin.com/in/palak-jain-5416131a6/" target="_blank" rel="noopener noreferrer" class="w-10 h-10 rounded-full border border-sage-600 flex items-center justify-center hover:bg-sage-700 transition"><i data-lucide="linkedin" class="w-5 h-5"></i></a>
                     </div>
                 </div>
 
