--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
                 <p class="mt-4 text-gray-600">Expert guidance tailored to your specific medical and lifestyle needs.</p>
             </div>
 
-            <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-8">
+            <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8">
                 <!-- Item 1 -->
                 <div class="p-8 rounded-2xl bg-sage-50 hover:bg-sage-100 transition-colors duration-300 text-center group">
                     <div class="w-16 h-16 mx-auto bg-white rounded-full flex items-center justify-center shadow-sm mb-6 group-hover:scale-110 transition-transform">
@@ -402,7 +402,7 @@
                                 </div>
                                 <div>
                                     <p class="text-xs text-sage-300 uppercase">Call/DM</p>
-                                    <p class="font-medium">+917986612485</p>
+                                    <p class="font-medium">7986612485</p>
                                 </div>
                             </div>
                             <div class="flex items-center gap-4">
@@ -411,7 +411,7 @@
                                 </div>
                                 <div>
                                     <p class="text-xs text-sage-300 uppercase">Email</p>
-                                    <p class="font-medium">hello@eatkind.in</p>
+                                    <p class="font-medium">hello.eatkind@gmail.com</p>
                                 </div>
                             </div>
                             <div class="flex items-center gap-4">
