Email Id Update

--- a/index.html
+++ b/index.html
@@ -402,7 +402,7 @@
                                 </div>
                                 <div>
                                     <p class="text-xs text-sage-300 uppercase">Call/DM</p>
-                                    <p class="font-medium">7986612485</p>
+                                    <p class="font-medium">+917986612485</p>
                                 </div>
                             </div>
                             <div class="flex items-center gap-4">
@@ -411,7 +411,7 @@
                                 </div>
                                 <div>
                                     <p class="text-xs text-sage-300 uppercase">Email</p>
-                                    <p class="font-medium">hello.eatkind@gmail.com</p>
+                                    <p class="font-medium">hello@eatkind.in</p>
                                 </div>
                             </div>
                             <div class="flex items-center gap-4">
